<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TicTacToe</string>
    <string name="home_title">Tic Tac Toe</string>
    <string name="pve">player VS android</string>
    <string name="pvp">Player VS Player</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="submit_button">Submit</string>
    <string name="play_again_button">Play Again</string>
    <string name="home_button">Home</string>
    <string name="turn">\'s Turn</string>
    <string name="won">\u0020Won!!!</string>
    <string name="tie">Tie Game!!!</string>
    <string name="X">X</string>
    <string name="O">O</string>
</resources>