<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/playerSetupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_name"
        android:textColor="@color/player_setup_title_text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSetupTitle">

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textColor="@color/player_setup_text"
            android:textColorHint="@color/player_setup_hint"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player2Title" />

        <TextView
            android:id="@+id/player2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/player2"
            android:textColor="@color/player2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/playerTwoName"
            app:layout_constraintTop_toBottomOf="@+id/playerOneName" />

        <TextView
            android:id="@+id/player1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textColor="@color/player1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/playerOneName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textColor="@color/player_setup_text"
            android:textColorHint="@color/player_setup_hint"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player1Title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:width="200dp"
        android:background="@drawable/submit_button"
        android:onClick="submitButtonClick"
        android:text="@string/submit_button"
        android:textColor="@color/submit_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>